# chromix

./: .gitignore  Cargo.toml  LICENSE  README.md  REBUILD_SPEC.md  colors.css  install.sh
.github/workflows/: release.yml
crates/chromix-cli/: Cargo.toml
crates/chromix-cli/src/: cli.rs  lib.rs  main.rs  render.rs  splash.rs
crates/chromix-cli/src/export/: css.rs  json.rs  mod.rs  tailwind.rs
crates/chromix-core/: Cargo.toml
crates/chromix-core/src/: color.rs  convert.rs  gamut.rs  gradient.rs  lib.rs  ramp.rs  wcag.rs
