[package]
name = "chromix-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "chromix"
path = "src/main.rs"

[dependencies]
chromix-core = { path = "../chromix-core" }
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
serde_json = "1"
terminal-light = "1.8"
arboard = "3"
atty = "0.2"